--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 <body>
     <div class="luxury-container">
         <div class="luxury-header">
-            <h1>فروشگاه اختصاصی عطرهای لاکچری همسر</h1>
-            <p>با کلیک روی هر حجم، مستقیماً به دایرکت اینستاگرام ما منتقل می‌شوید</p>
+            <h1>فروشگاه اختصاصی عطر همسر</h1>
+            <p>با کلیک روی هر حجم، مستقیماً به دایرکت اینستاگرام ما منتقل می‌شوید و فقط کافی پیست کنید تا متن سفارش ارسال بشه</p>
             <a href="https://instagram.com/hamsarperfume" class="instagram-link" target="_blank">
                 <i class="fab fa-instagram"></i> hamsarperfume@
             </a>
@@ -424,6 +424,9 @@
         
         <div class="footer-note">
             برای سفارش روی حجم مورد نظر کلیک کنید
+            و فقط در دایرکت و در نوار متن گزینه
+            paste / جایگذاری
+            را بزنید.
         </div>
     </div>
 
